# agent-lab

./: .env.example  .gitignore  .gitmodules  AGENTS.md  README.md  docker-compose.yml  pyproject.toml  requirements-cron.txt  requirements-shiftshapr.txt
config/: civic_mason_badge.md  project_tags.yaml
data/: master_calendar.json  opportunities.json  shiftshapr_context.json  substack_cache.json
docs/: AGENT_AND_MONUMENT_DECISIONS.md  BORIS_CHERNY_WORKFLOW_CURSOR_MAP.md  CLOUDFLARED_DRAFT_EDITOR.md  DAILY_PREP_AND_MESSAGING_PLAN.md  DELIVERY_SETUP.md  EMAIL_OPPORTUNITY_SEARCH_WORKFLOW.md  GIT_WORKTREES_PARALLEL_AGENTS.md  IDEAS_BACKLOG.md  JAUMEMORY_AGENT_LAB.md  JAUMEMORY_LOG_2026-03_Bride_Charlie_Workflow.md  LINKEDIN_SETUP.md  MESSAGING_INTEGRATIONS.md  META_LAYER_GRAPH_ENRICHMENT_DESIGN.md  MONUMENT_DATA_SAT_AND_RESOLVER_SPEC.md  OPENAI_IMAGES.md  PACHA_AGENT_GOVERNANCE.md  PACHA_PRODUCER_AGENT_AUTONOMY_CHARTER.md  PAI_MCP_SETUP.md  README.md  SCAFFOLDING.md  SHIFTSHAPR_SETUP.md  SLACK_TOKEN_REFRESH.md  hermes-setup-guide.md
drafts/: post-ai-doc-event-promo.md
knowledge/: README.md  canvas_insights.md  meta_layer_schema.md  metaweb_book.md  pacha_schema.md  substack_highlights.md
prompts/: event-promotion-post-ai-doc.md
scripts/: ack-meeting.py  add-platform.py  add-platform.sh  check-replies.py  cloudflared-draft-editor.sh  cloudflared-print-urls.sh  cloudflared-tunnels.sh  convert-metaweb-htm-to-md.py  cron-daily-prep.sh  cron-email-opportunity.sh  cron-linkedin-replies.sh  cron-meeting-reminder.sh  cron-weekly-preview.sh  crontab.example  diagnose-mcp.py  (+31 more)
(+407 files in other folders)
